[package]
name = "bevy_touch_stick"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "input", "gui"]
description = "Bevy virtual Joystick for mobile games"
exclude = ["default_assets/", ".github/"]
keywords = ["game", "ui", "gamedev", "bevy", "input"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/johanhelsing/bevy_touch_stick"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_render",
    "bevy_ui"
] }
serde = { version = "^1", optional = true }

[build-dependencies]
serde = { version = "^1", features = ["derive"], optional = true }

[dev-dependencies]
bevy = "0.11"
bevy-inspector-egui = "0.20"