[package]
name = "bevy_touch_stick"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "input", "gui"]
description = "Bevy virtual Joystick for mobile games"
exclude = ["default_assets/", ".github/"]
keywords = ["game", "ui", "gamedev", "bevy", "input"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/johanhelsing/bevy_touch_stick"

[features]
default = ["serde", "gamepad_mapping"]
serde = ["dep:serde"]
# integrate with bevy as a gamepad
gamepad_mapping = []

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_render",
    "bevy_ui"
] }
serde = { version = "^1", optional = true }

[build-dependencies]
serde = { version = "^1", features = ["derive"], optional = true }

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "wayland",
    "webgl2"
] }
bevy-inspector-egui = {version = "0.21.0", default-features = false}
leafwing-input-manager = "0.11"

[[example]]
name = "leafwing"
required-features = ["gamepad_mapping"]
